# 500-rtm-pi-code

./: README.md
500-rtm-pi/: CMakeLists.txt  Makefile  platformio.ini
500-rtm-pi/src/: communication.cpp  dataStoring.cpp  globalVariables.cpp  main.cpp  spi.cpp
500-rtm-pi/src/header/: communication.h  dataStoring.h  globalVariables.h  spi.h
